Update some issue.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - Three Particle Morphing Text</title>
+    <title>Awesome software engineer</title>
     <link rel="stylesheet" href="assets/reset.min.css">
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&amp;display=swap'> -->
     <link rel="stylesheet" href="lib/css2.css">
