Add logo for awesome

--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
 </head>
 
 <body>
-<!-- partial:index.partial.html -->
-<div class="triggers hide">
-	<span data-disabled="true" data-color="#3D8CD0">Let's</span>
-	<span data-disabled="true" data-color="#D32A7B">Work</span>
-	<span data-disabled="true" data-color="#2AD37A">Together</span>
-</div>
-<div id="app">
-</div>
+    <div class="logo">
+        <iframe src="logo/index.html" width="300px" height="300px"></iframe>
+    </div>
+    <!-- partial:index.partial.html -->
+    <div class="triggers hide">
+        <span data-disabled="true" data-color="#3D8CD0">Let's</span>
+        <span data-disabled="true" data-color="#D32A7B">Work</span>
+        <span data-disabled="true" data-color="#2AD37A">Together</span>
+    </div>
+    <div id="app">
+    </div>
 
-<!-- partial -->
-<script src='lib/three.js'></script>
-<script src='lib/TweenMax.min.js'></script>
-<script src='lib/OrbitControls.js'></script>
-<script src='lib/GeometryUtils.js'></script>
+    <!-- partial -->
+    <script src='lib/three.js'></script>
+    <script src='lib/TweenMax.min.js'></script>
+    <script src='lib/OrbitControls.js'></script>
+    <script src='lib/GeometryUtils.js'></script>
 
-<script type="module" src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 
 </body>
 </html>
